--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -28,6 +28,23 @@
 // =book
 // 	font-family: "book", Arial, sans-serif
 
+// media
+=r1
+	@media only screen and (max-width: 1320px)
+		@content
+
+=r2
+	@media only screen and (max-width: 990px)
+		@content
+=r3
+	@media only screen and (max-width: 660px)
+		@content
+=r4
+	@media only screen and (max-width: 480px)
+		@content
+
+// fonts
+
 // roboto-font
 =roboto
 	font-family: 'Roboto', Arial, sans-serif
@@ -77,11 +94,12 @@
 	font-family: 'Fira Sans', Helvetica, Arial, sans-serif
 	font-weight: 700
 	font-style: italic
-
+	
 body
 	+reg
 	font-size: 14px
 	line-height: 1.4
+	min-width: 320px 
 	
 // common blocks
 
@@ -95,20 +113,23 @@ h1, .h1
 	font-size: 60px
 	+bold
 
-h2, .h2
-	font-size: 56px 
-	+bold
-
 a
 	color: #000
 	text-decoration: none
 
 .container
-	width: 1300px
+	width: 1320px  
+	padding: 0 15px 
 	margin: 0 auto
+	+r1
+		width: 990px
+	+r2
+		width: 660px
+	+r3
+		width: 100% 
 
 .tech-row
-	margin: 20px 0 
+	padding: 10px 0 
 
 .btn
 	display: inline-block
