news page in progress

--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -7,6 +7,7 @@
 
 $icon-sepa: "\EA01"
 $icon-skrill: "\EA02"
+$icon-vk: "\EA03"
 
 
 %icon
@@ -27,3 +28,5 @@ $icon-skrill: "\EA02"
 	content: $icon-sepa
 .icon-skrill:before
 	content: $icon-skrill
+.icon-vk:before
+	content: $icon-vk
