--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,8 +5,10 @@
 @import lib/svgfont
 // @import lib/slick
 
+@import typography
 @import common
 @import main
 @import pages
 @import header
 @import footer
+@import inner
