--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -1,12 +1,13 @@
 // typography
 .article
 	font-size: 18px
+	line-height: 1.6
 	a
 		font-size: 18px
 	p
-		margin-bottom: 25px
+		margin-bottom: 30px
 	ul
-		margin-bottom: 25px
+		margin-bottom: 30px
 		li
 			position: relative
 			color: #9bc1bc
@@ -16,4 +17,4 @@
 			span
 				color: #000
 				font-size: 1.125em
-				padding-left: 7px 
+				padding-left: 7px
