--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,27 @@
 <header class="header">
-	
+	<a href="#" class="logo">
+		<span class="logo__orange">Dis</span>
+		<span>LIFE</span>
+	</a>
+	<button class="btn-nav js-nav-btn">
+		<span></span>
+	</button>
+	<div class="header__inner">
+		<nav class="nav js-nav">
+			<ul class="nav__list">
+				<li class="nav__item"><a href="#" class="nav__link is-brown"><span>Здоровье</span></a></li>
+				<li class="nav__item"><a href="#" class="nav__link is-purple"><span>Образование</span></a></li>
+				<li class="nav__item"><a href="#" class="nav__link is-yellow"><span>Маленькая политика</span></a></li>
+				<li class="nav__item"><a href="#" class="nav__link is-drop is-active is-orange"><span>Спецпроекты</span> <i class="fa fa-chevron-down"></i></a></li>
+			</ul>
+		</nav>
+		<a href="#" class="btn-enter">
+			<i class="fa fa-sign-in"></i>
+			<span>Вход</span>
+		</a>
+	</div>
+	<div class="mini-search">
+		<input type="text" class="mini-search__input js-mini-search-input">
+		<i class="fa fa-search js-mini-search-btn"></i>
+	</div>
 </header>
