--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,1 +1,203 @@
-// header
+.header
+	position: relative
+	background-color: #fff
+	box-shadow: 0 2px 6px rgba(159, 159, 159, 0.5)
+	margin-bottom: 30px
+	padding: 0 200px
+	min-height: 80px
+	z-index: 10
+	+r1
+		padding: 0 70px 0 165px 
+	+r2
+		min-height: 60px
+		padding: 0 55px 
+	&__inner
+		margin: 0 auto
+		max-width: 1290px
+		+clr
+
+.mini-search
+	position: absolute
+	top: 0
+	right: 0
+	padding: 24px 25px 26px 10px 
+	background: #fff 
+	min-width: 70px
+	+r2
+		padding: 17px 15px 16px 10px 
+		min-width: 55px
+	&__input
+		border-bottom: 4px solid rgba(#282828, 0.15)
+		color: #282828  
+		font-size: 18px
+		padding: 2px 0 2px 0
+		width: 0
+		transition: width 0.3s
+		float: right
+		+r2
+			border-bottom-width: 2px 
+		&.is-active
+			width: 180px
+			padding-right: 30px
+	i
+		font-size: 29px
+		color: #282828
+		position: absolute
+		top: 24px
+		right: 25px
+		cursor: pointer
+		+r2
+			top: 17px
+			right: 15px
+			font-size: 25px
+
+.logo
+	+bold
+	color: #282828
+	white-space: nowrap
+	font-size: 0
+	line-height: 1
+	position: absolute
+	top: 10px
+	left: 25px
+	padding: 13px 0 7px
+	+r2
+		top: 5px
+		left: 15px
+		padding: 13px 0 7px 
+	&__orange
+		color: #ff8c61
+		margin-right: -9px
+		z-index: 2
+	span
+		display: inline-block
+		vertical-align: top
+		font-size: 40px
+		position: relative
+		+r2
+			font-size: 30px 
+
+.btn-nav
+	float: left
+
+.btn-enter
+	float: right
+	color: #282828
+	font-size: 18px
+	line-height: 1
+	+med
+	content: ""
+	position: relative
+	padding: 10px 0 10px 40px
+	margin: 21px 0 
+	min-height: 37px
+	+r2
+		margin: 14px 0 10px 
+	i
+		font-size: 37px
+		position: absolute
+		top: 50%
+		left: 0
+		margin-top: -19px
+		+r2
+			font-size: 32px
+	span
+		+r2
+			display: none
+		
+.nav 
+	font-size: 0
+	float: left
+	+r2
+		// display: none
+		position: fixed
+		top: 60px
+		bottom: 0
+		right: 0
+		width: 100%
+		max-width: 300px
+		background: #fff 
+		box-shadow: 0 5px 6px rgba(159, 159, 159, 0.5)
+		overflow: hidden
+		padding: 20px 0 
+	&:before
+		content: "" 
+		position: absolute
+		top: -10px
+		left: 0
+		right: 0
+		box-shadow: 0 2px 6px rgba(159, 159, 159, 0.5)
+		height: 10px
+		display: none
+		+r2
+			display: block
+	&__item
+		display: inline-block
+		vertical-align: top
+		padding: 0 20px 0 0 
+		+r2
+			display: block
+			padding: 0 
+	&__link
+		color: #282828
+		font-size: 18px
+		line-height: 1
+		+med
+		display: block
+		position: relative
+		transition: color 0.3s
+		&:hover
+			span
+				&:before
+					width: 100%
+		&.is-brown
+			&:hover, &.is-active
+				color: #d27857
+			span
+				&:before
+					border-color: #d27857 
+		&.is-purple
+			&:hover, &.is-active
+				color: #c0a6cd
+			span
+				&:before
+					border-color: #c0a6cd
+		&.is-yellow
+			&:hover, &.is-active
+				color: #f2c05e
+			span
+				&:before
+					border-color: #f2c05e
+		&.is-orange
+			&:hover, &.is-active
+				color: #ff8c61
+			span
+				&:before
+					border-color: #ff8c61
+		&.is-drop
+			padding-right: 25px
+		i
+			font-size: 14px
+			position: absolute
+			top: 50%
+			right: 0
+			margin-top: -9px
+			+r2
+				right: 15px
+		span
+			display: block
+			padding: 30px 0 32px 
+			position: relative
+			+r2
+				padding: 6px 15px
+				text-align: right 
+			&:before
+				content: "" 
+				position: absolute
+				bottom: 0
+				left: 0
+				width: 20px
+				border-bottom: 5px solid 
+				transition: width 0.3s
+				+r2
+					display: none
