--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,4 @@
+<a href="#" class="top-banner" style="background-image: url(img/top-banner.jpg);"></a>
 <header class="header">
 	<a href="#" class="logo">
 		<span class="logo__orange">Dis</span>
