--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,3 +1,18 @@
+body
+	&.overflow-hidden
+		position: fixed
+		width: 100%
+
+.top-banner
+	width: 100%
+	height: 149px
+	+cover
+	display: block
+	+r1
+		background-position: 43% 50% 
+	+r2
+		display: none
+
 .header
 	position: relative
 	background-color: #fff
@@ -10,7 +25,7 @@
 		padding: 0 70px 0 165px 
 	+r2
 		min-height: 60px
-		padding: 0 55px 
+		padding: 0 55px 0 115px 
 	&__inner
 		margin: 0 auto
 		max-width: 1290px
@@ -79,6 +94,43 @@
 
 .btn-nav
 	float: left
+	width: 28px
+	height: 21px
+	position: relative
+	cursor: pointer
+	margin: 20px 10px 0
+	display: none
+	background: none
+	+r2
+		display: block
+	&.is-active
+		&:before, &:after
+			top: 9px
+			transition: transform 0.2s 0.2s, top 0.2s
+		&:before
+			transform: rotate(45deg)
+		&:after
+			transform: rotate(-45deg)
+		span
+			opacity: 0
+			transition: opacity 0.2s
+	&:before, &:after, span
+		border-bottom: 3px solid #282828
+		width: 100%
+		position: absolute
+		left: 50%
+		margin-left: -14px 
+	&:before, &:after
+		content: ""
+		transition: transform 0.2s, top 0.2s 0.2s
+	&:before
+		top: 0
+	&:after
+		top: 18px
+	span
+		top: 9px
+		transition: opacity 0.2s 0.25s
+
 
 .btn-enter
 	float: right
@@ -109,21 +161,29 @@
 	font-size: 0
 	float: left
 	+r2
-		// display: none
 		position: fixed
 		top: 60px
 		bottom: 0
-		right: 0
+		left: 0
 		width: 100%
 		max-width: 300px
 		background: #fff 
 		box-shadow: 0 5px 6px rgba(159, 159, 159, 0.5)
 		overflow: hidden
-		padding: 20px 0 
+		visibility: hidden
+		opacity: 0
+		transform: translateX(-100%)
+		transition-property: opacity, visibility, transform
+		transition-duration: 0.4s
+	&.is-active
+		+r2
+			transform: translateX(0)
+			opacity: 1
+			visibility: visible 
 	&:before
 		content: "" 
 		position: absolute
-		top: -10px
+		top: -9px
 		left: 0
 		right: 0
 		box-shadow: 0 2px 6px rgba(159, 159, 159, 0.5)
@@ -131,6 +191,11 @@
 		display: none
 		+r2
 			display: block
+	&__list
+		+r2
+			max-height: 100%
+			overflow: auto 
+			padding: 20px 0 
 	&__item
 		display: inline-block
 		vertical-align: top
@@ -190,7 +255,6 @@
 			position: relative
 			+r2
 				padding: 6px 15px
-				text-align: right 
 			&:before
 				content: "" 
 				position: absolute
