--- a/src/sass/_pages.sass
+++ b/src/sass/_pages.sass
@@ -100,15 +100,17 @@
 	+clr
 	&:hover
 		.textbl__ttl
-			text-decoration: underline
+			color: $mint
 	&_no-border
 		border-color: transparent
 	&__inner
 		max-width: 80%
+		padding-right: 15px
 	&__ttl
 		margin-bottom: 7px
 		font-size: 21px
 		+bold
+		+tr(color 0.2s)
 		span
 			color: $mint
 	&__txt
@@ -143,8 +145,15 @@
 	&__date
 		font-size: 14px
 		color: #AEB0B2
+		white-space: nowrap
 	&__highlight
 		color: $mint
+	+r2
+		.textbl__img
+			float: none
+		.textbl__inner
+			max-width: initial
+			padding-right: 0
 
 // more
 .more
