--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -4,11 +4,11 @@ $green: #9bc1bc
 	width: 13px
 	height: 13px
 	background: $green
-	display: inline-block 
+	display: inline-block
 
 .text-big
 	font-size: 24px
-	+med 
+	+med
 	&_md
 		font-size: 20px
 
@@ -22,30 +22,30 @@ $green: #9bc1bc
 	+reg
 	font-size: 11px
 	color: #b7b7b7
-	
+
 .divider
 	height: 1px
 	margin: 20px 0
-	background: $green 
-	  
+	background: $green
+
 // news
 .l-news
 	+clr
 	.l-col1
-		padding-right: 15px 
-		float: left 
+		padding-right: 15px
+		float: left
 		width: 66.67%
 		width: calc(100% - (100% / 3))
 	.l-col2
 		float: right
-		padding-left: 15px 
-		padding-right: 110px 
-		width: 33.33% 
+		padding-left: 15px
+		padding-right: 110px
+		width: 33.33%
 		width: calc(100% / 3)
-		
+
 // soc-v
 .soc-wrapper
-	padding-left: 110px 
+	padding-left: 110px
 	position: relative
 	.soc-v
 		position: absolute
@@ -54,7 +54,7 @@ $green: #9bc1bc
 .soc-v
 	> li
 		text-align: center
-		margin-bottom: 1px 
+		margin-bottom: 1px
 		display: block
 		a
 			font-size: 29px
@@ -62,10 +62,10 @@ $green: #9bc1bc
 			padding: 12px 10px
 			background: #9bc1bc
 			width: 50px
-			height: 50px  
+			height: 50px
 			+tr(background .3s)
 			&.fa-envelope
-				font-size: 24px 
+				font-size: 24px
 			&.icon-vk
 				font-size: 24px
 			&:hover
@@ -76,34 +76,36 @@ $green: #9bc1bc
 	h1, .h1
 		margin-bottom: 20px
 	.text-big
-		margin-bottom: 40px 
+		margin-bottom: 40px
 .news-line
 	margin-bottom: 40px
 	.btn
 		display: inline-block
 		vertical-align: middle
 		margin-right: 20px
-		margin-left: -5px  
+		margin-left: -5px
 	&__info
 		display: inline-block
 		vertical-align: middle
 		color: #757575
 		span
 			+light
-			padding-left: 10px 
-			
-// sidebar 
+			padding-left: 10px
+
+// sidebar
 .banner-img
 	padding: 45px 25px
-	border: 1px solid #e6e6e6 
+	border: 1px solid #e6e6e6
 	text-align: center
 	margin-bottom: 20px
-	background: #fff 
+	background: #fff
 	a
 		line-height: 0
 	img
-		max-width: 100% 
-		
+		max-width: 100%
+	+r2
+		display: none
+
 .item-sm
 	font-size: 16px
 	padding-bottom: 15px
@@ -113,14 +115,14 @@ $green: #9bc1bc
 		border: 0
 	+light
 	p
-		line-height: 1.2 
+		line-height: 1.2
 	.text-big
-		margin-bottom: 10px 
+		margin-bottom: 10px
 		line-height: 1
 	&:hover
 		.text-big
 			text-decoration: underline
-	
-		
+
+
 
 
