--- a/src/sass/_pages.sass
+++ b/src/sass/_pages.sass
@@ -20,6 +20,13 @@
 		color: #9bc1bc
 		line-height: 1
 		cursor: pointer
+	+r3
+		&__btn
+			font-size: 35px
+			margin-top: -17.5px
+		input
+			padding-left: 70px
+			font-size: 25px
 
 // filter
 .filter
