--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,5 +1,5 @@
 .main
-	padding: 30px 0 
+	padding: 30px 15px
 	&__row
 		margin: 0 -15px
 		+clr
@@ -15,17 +15,17 @@
 	border: 1px solid #e6e6e6
 	padding: 19px 15px 15px
 	text-align: center
+	margin-bottom: 30px
 	&__title
 		font-size: 22px
 		line-height: 1.18
-		color: #282828
 		+medi
 		&:after
 			width: 38px
 			border-bottom: 3px solid #e6e6e6
 			margin: 11px auto 15px
 			display: block
-			content: ""  
+			content: "" 
 	&__list
 		font-size: 0
 		li
@@ -49,3 +49,195 @@
 				background-color: #ed812b
 		i
 			font-size: 24px 
+
+.news-main
+	&__title
+		font-size: 14px
+		line-height: 20px
+		padding-left: 23px
+		position: relative
+		+light
+		i
+			color: #9bc1bc
+			font-size: 18px
+			position: absolute
+			top: 0
+			left: 0
+	&__link
+		color: #9bc1bc
+		+roboto
+		font-size: 18px
+		line-height: 1
+		position: relative
+		display: inline-block
+		vertical-align: top
+		padding-right: 20px
+		i
+			position: absolute
+			top: 1px
+			right: 0
+	&__list
+		max-height: 1387px
+		overflow: hidden
+		position: relative
+		margin-bottom: 15px
+		&:before
+			content: "" 
+			position: absolute
+			bottom: 0
+			left: 0
+			right: 0
+			height: 100px
+			background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #fff 100%)
+			
+
+.news-item
+	border-bottom: 1px solid #e6e6e6
+	padding: 25px 0  
+	&:first-child
+		padding-top: 22px
+	&:last-child
+		border: none
+	&__title
+		font-size: 20px
+		line-height: 22px
+		+med
+		margin-bottom: 10px
+	p
+		font-size: 16px
+		line-height: 20px
+		+light
+		margin-bottom: 10px
+	time
+		display: block
+
+.item-lg
+	padding: 60px 30px 37px
+	position: relative
+	+cover
+	&:before
+		content: "" 
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		background-image: linear-gradient(180deg, rgba(64, 38, 57, 0.7) 0%, rgba(62, 36, 55, 0.85) 100%)
+		z-index: 1
+		
+	.btn
+		position: absolute
+		top: 10px
+		left: -5px
+		z-index: 2
+		background: #fff 
+	&__in
+		position: relative
+		z-index: 1
+		+clr
+	&__box, &__slider
+		float: left
+	&__box
+		background-color: rgba(255, 255, 255, 0.9)
+		width: 31%
+		padding: 25px 20px 32px 28px 
+		p
+			font-size: 18px
+			+light
+			line-height: 24px
+	&__slider
+		width: 69%
+		padding: 0 20px 0 71px
+	&__title
+		font-size: 52px
+		line-height: 1
+		+bold
+		margin-bottom: 22px
+
+.slider
+	max-width: 100% 
+	width: 760px
+	height: 350px
+	position: relative
+	&:before, &:after
+		content: "" 
+		position: absolute
+		left: 0
+		right: 0
+		height: 151px
+		border: 1px solid #fff
+	&:before
+		top: 0
+		border-bottom: none
+	&:after
+		bottom: 0
+		border-top: none
+	&__prev, &__next
+		position: absolute
+		top: 50%
+		margin-top: -25px
+		width: 50px
+		height: 50px
+		border: 1px solid #fff
+		border-radius: 50%
+		font-size: 32px
+		color: #fff
+		background: none  
+		cursor: pointer
+	&__prev
+		left: -24px
+		i
+			margin-right: 4px
+	&__next
+		right: -24px
+		i
+			margin-left: 4px
+
+.slide
+	color: #fff
+	padding: 53px 110px
+	position: relative
+	z-index: 3
+	&__title
+		font-size: 36px
+		line-height: 1
+		+lorai
+	&__author
+		font-size: 0
+	&__img, &__name
+		display: inline-block
+		vertical-align: middle
+	&__img
+		width: 70px
+		height: 70px
+		border-radius: 50%
+		overflow: hidden
+		margin-right: 20px
+		img
+			width: 100%
+			height: 100%
+			border-radius: 50%
+	&__name
+		font-size: 18px
+		line-height: 21px
+		+med
+	&__line
+		overflow: hidden
+		position: relative
+		height: 14px
+		&:before, &:after
+			content: "" 
+			position: absolute
+			top: 0
+			border-top: 2px solid #fff 
+			width: 300px
+		&:before
+			left: -115px
+		&:after
+			left: 240px
+		span
+			height: 14px
+			margin-left: 185px
+			width: 55px
+			border-top: 1px solid red 
+			display: block
